--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.Design.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".StoreActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GroundActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AtmosphereActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StatusActivity"
+            android:exported="false" />
+        <activity
             android:name=".SpaceActivity"
             android:exported="false" />
         <activity
